Temp HTML Table

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <table>
+		<thead>
+			<tr>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Email</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>John</td>
+				<td>Doe</td>
+				<td>john.doe@example.com</td>
+			</tr>
+			<tr>
+				<td>Jane</td>
+				<td>Doe</td>
+				<td>jane.doe@example.com</td>
+			</tr>
+			<tr>
+				<td>Bob</td>
+				<td>Smith</td>
+				<td>bob.smith@example.com</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
