--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -8,30 +8,10 @@
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
+	<script src="../../Backend/Main/test.ts"></script>
     <table>
 		<thead>
-			<tr>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Email</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>John</td>
-				<td>Doe</td>
-				<td>john.doe@example.com</td>
-			</tr>
-			<tr>
-				<td>Jane</td>
-				<td>Doe</td>
-				<td>jane.doe@example.com</td>
-			</tr>
-			<tr>
-				<td>Bob</td>
-				<td>Smith</td>
-				<td>bob.smith@example.com</td>
-			</tr>
+				
 		</tbody>
 	</table>
 </body>
