Table Generator Use

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
-	<script src="../../Backend/Main/test.ts"></script>
+	<script src="../../Backend/Main/index.ts"></script>
     <table>
 		<thead>
 				
